--- a/index.html
+++ b/index.html
@@ -1,258 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
+    <!-- FIM GOOGLE FONTS -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio Gustavo</title>
-    <link rel="shortcut icon" href="images/portifolio-de-negocios.png" type="image/x-icon">
-    <link rel="stylesheet" href="./src/css/estilo.css">
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <!-- Fim icons -->
 
-    <!-- box icons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
+    <!--  -->
+    <link
+      rel="shortcut icon"
+      href="./src/images/perfil.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./src/css/estilo.css" />
+    <title>GDT</title>
+  </head>
+  <body>
+    <header>
+      <div class="interface">
+        <div class="logo">
+          <a href="#">
+            <img
+              src="./src/images/LogoGustavo-removebg-preview.png"
+              alt="Logo GDT"/>
+          </a>
+        </div>
 
-<body>
-
-    <!-- header design -->
-
-    <header class="header">
-        <a href="index.html" class="logo"><img src="./src/images/LogoGustavo-removebg-preview.png" alt=""></a>
-
-        <div class="bx bx-menu" id="menu-icon"></div>
-
-        <nav class="navbar">
-            <a href="#home" class="active" >Inicio</a>
-            <a href="#about">Sobre</a>
-            <a href="#education">Educação</a>
-            <a href="#skills">Habilidades</a>
-            <a href="#contact">Contato</a>
+        <nav class="menu_desktop">
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+          </ul>
         </nav>
+
+        <div class="btn_contato">
+          <a href="#">
+            <button>Contato</button>
+          </a>
+        </div>
+      </div>
     </header>
 
-    <!-- home section design -->
+    <main>
+        <section class="topo_site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt_topo_site">
+                        <h1>Transformando ideias em realidade digital<span>.</span>
+                        </h1>
 
-    <section class="home" id="home">
-        <div class="home-content">
-            <h1>Olá, sou o <span>Gustavo Duarte</span></h1>
-            <div class="text-animate">
-                <h3><span class="multiple-text"></span></h3>
-            </div>
-            <p>Estudante apaixonado por tecnologia e programação, com o objetivo claro de se tornar um especialista em desenvolvimento web. Focado em se tornar um profissional back end, front end ou full stack, estou constantemente aprendendo e buscando experiências práticas para aprimorar minhas habilidades. Determinado a contribuir significativamente para projetos inovadores e desafiadores no mundo do desenvolvimento de software.</p>
-            <div class="btn-box">
-                <a href="#" class="btn">Dowload CV</a>
-            </div>
-        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, rem dolorum, obcaecati iure ullam aperiam explicabo exercitationem aspernatur dolore esse et? Doloribus repellat nemo modi temporibus vero, labore vitae cupiditate!</p>
 
-        <div class="img">
-            <img src="./src/images/SobreGustavo.png" alt="">
-        </div>
-
-        <div class="home-sci">
-            <a href="https://instagram.com/duarte_guuh"><i class='bx bxl-instagram' ></i></a>
-            <a href="https://github.com/kekeldoBorel"><i class='bx bxl-github' ></i></a>
-            <a href="https://www.linkedin.com/in/gustavoduartetobias/"><i class='bx bxl-linkedin' ></i></a>
-        </div>
-    </section>
-
-    <!-- about section design -->
-
-    <section class="about" id="about">
-        <h2 class="heading">Sobre <span>Mim</span></h2>
-
-        <div class="about-img">
-            <img src="./src/images/FotoSorrindo-removebg-preview.png" alt="">
-            <span class="circle-spin"></span>
-        </div>
-
-        <div class="about-content">
-            <h3>Gustavo Duarte Tobias</h3>
-            <p>Estudante dedicado com sólida formação no ensino médio e conclusão bem-sucedida do curso técnico em Análise e Desenvolvimento de Sistemas. Além disso, aprimorei minhas habilidades linguísticas em espanhol e inglês no Centro de Línguas. Enquanto desenvolvo minha expertise em programação, meu hobbie é jogar futebol, equilibrando a paixão pelos códigos com a energia e disciplina do esporte. Embora minhas experiências de aprendizado autodidata em várias linguagens de programação não tenham sido formalmente certificadas, estou profundamente comprometido em me tornar um especialista em desenvolvimento web. Minha paixão reside tanto no back end quanto no front end, com aspirações de me tornar um desenvolvedor full stack. Estou ansioso para aplicar minha dedicação e conhecimento em projetos desafiadores e inovadores na área de tecnologia.</p>
-
-            <div class="btn-box btns">
-                <a href="#" class="btn">Saiba mais</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- education section design -->
-
-    <section class="education" id="education">
-        <h2 class="heading">Minha <span>Trajetória</span></h2>
-
-        <div class="education-row">
-            <div class="education-column">
-                <h3 class="title">Educação</h3>
-
-                <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2011 - 2014</div>
-                            <h3>Ensino Fundamental 1 (1º ao 4º ano - Escola Particular) - Colégio Barreto Gurian</h3>
-                            <p>Nos primeiros anos da minha jornada educacional, frequentei uma escola particular, onde desenvolvi uma base sólida para o aprendizado, preparando-me para os desafios futuros.</p>
+                        <div class="btn_contato">
+                            <a href="#"><button>Entre em Contato</button></a>
                         </div>
                     </div>
 
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2015 - 2019</div>
-                            <h3>Ensino Fundamental 2 (5º ao 9º ano - Escola Pública) - E.E Joaqim Silvério Gomes dos Reis</h3>
-                            <p>No ensino fundamental 2, migrei para uma escola pública, onde aprendi valiosas lições sobre diversidade e cooperação, moldando minha perspectiva e resiliência.</p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2022</div>
-                            <h3>Ensino Médio (Escola Pública) - E.E Oswaldo Catalano</h3>
-                            <p>Durante o ensino médio, aprofundei meu conhecimento em diversas disciplinas, concentrando-me especialmente nas ciências da computação e na tecnologia.</p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2020</div>
-                            <h3>Centro de Línguas (Inglês) - E.E Fadlo Haldair</h3>
-                            <p>No Centro de Línguas, dediquei-me ao estudo do inglês, aprimorando minhas habilidades linguísticas e comunicação global.</p>
-                        </div>
+                    <div class="img_topo_site">
+                        <img src="./src/images/SobreGustavo.png" alt="Foto GDT">
                     </div>
                 </div>
             </div>
+        </section>
 
-            <div class="education-column">
-                <h3 class="title">Educação</h3>
-
-                <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2021</div>
-                            <h3>Centro de Línguas (Espanhol) - E.E Fadlo Haldair</h3>
-                            <p>Além do inglês, também me dediquei ao estudo do espanhol no Centro de Línguas, expandindo meu domínio sobre idiomas e compreensão cultural.</p>
-                        </div>
+        <section class="habilidades">
+            <div class="interface">
+                <h2 class="titulo">Minhas <span>Habilidades</span></h2>
+                <div class="flex">
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-html"></i>
+                        <h3>HTML</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
                     </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023</div>
-                            <h3>Curso Técnico em Análise e Desenvolvimento de Sistemas - Etec Itaquera</h3>
-                            <p>Completei com sucesso meu curso técnico em Análise e Desenvolvimento de Sistemas, onde adquiri habilidades técnicas essenciais para minha futura carreira no campo da tecnologia da informação. Minha formação técnica sólida solidificou minha paixão pelo desenvolvimento de software e me impulsionou a buscar oportunidades para aplicar esse conhecimento de forma prática.</p>
-                        </div>
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-css"></i>
+                        <h3>CSS</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
                     </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2023 - 2023</div>
-                            <h3>Projeto "Dev em Dobro" (7 dias - Certificado Emitido) - On-line</h3>
-                            <p>Participei do projeto "Dev em Dobro", um desafio de 7 dias em desenvolvimento web. Recebi um certificado após trabalhar em equipe para criar soluções inovadoras no back end e front end. Essa experiência intensiva aprimorou minha habilidade e confiança como desenvolvedor, enriquecendo meu portfólio profissional.</p>
-                        </div>
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-js"></i>
+                        <h3>JavaScript</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
                     </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2017 - 2023</div>
-                            <h3>Curso em Video - On-line</h3>
-                            <p>Estudei HTML, CSS, Java e JavaScript na plataforma Curso em Vídeo, ampliando meu conhecimento em desenvolvimento web. Embora não tenha um certificado formal, essa experiência autodidata fortaleceu minhas habilidades práticas. Estou pronto para aplicar esse conhecimento em projetos reais, buscando oportunidades contínuas para crescimento na área de desenvolvimento de software.</p>
-                        </div>
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-php"></i>
+                        <h3>PHP</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- skills section design -->
-
-    <section class="skills" id="skills">
-        <h2 class="heading">Minhas <span>Habilidades</span></h2>
-
-        <div class="skills-row">
-            <div class="skills-column">
-                <h3 class="title">habilidades Programação</h3>
-
-                <div class="skills-box">
-                    <div class="skills-content">
-                        <div class="progress">
-                            <h3>HTML <span>89%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>CSS <span>52%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>JavaScript <span>18%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Lógicas de Programação <span>63%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-java"></i>
+                        <h3>Java</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
+                    </div>
+                    <div class="habilidades_box">
+                        <i class="bi bi-filetype-sql"></i>
+                        <h3>MySQL</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
                     </div>
                 </div>
             </div>
-
-            <div class="skills-column">
-                <h3 class="title">Outras Habilidades</h3>
-
-                <div class="skills-box">
-                    <div class="skills-content">
-                        <div class="progress">
-                            <h3>Photoshop <span>67%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Word <span>76%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Excel <span>66%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Edição de Videos <span>46%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- contact section design -->
-
-    <section class="contact" id="contact">
-        <h2 class="heading">Contate-<span>Me!</span></h2>
-
-        <div class="icons">
-            <a href="https://instagram.com/duarte_guuh"><i class='bx bxl-instagram' ></i></a>
-            <a href="https://github.com/kekeldoBorel"><i class='bx bxl-github' ></i></a>
-            <a href="https://www.linkedin.com/in/gustavoduartetobias/"><i class='bx bxl-linkedin' ></i></a>
-            <a href="https://wa.me/5511931431381"><i class='bx bxl-whatsapp' ></i></a>
-        </div>
-        
-    </section>
-
-    <!-- footer design -->
-
-    <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by Gustavo Duarte Tobias</p>
-        </div>
-
-        <div class="footer-iconTop">
-            <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-    </footer>
-
-
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="./src/js/script.js"></script>
-</body>
-
+        </section>
+    </main>
+  </body>
 </html>
