--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- FIM GOOGLE FONTS -->
 
     <!-- icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
     <!-- Fim icons -->
 
     <!--  -->
@@ -29,16 +35,16 @@
           <a href="#">
             <img
               src="./src/images/LogoGustavo-removebg-preview.png"
-              alt="Logo GDT"/>
+              alt="Logo GDT"
+            />
           </a>
         </div>
-
         <nav class="menu_desktop">
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Especialidades</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="#topo">Inicio</a></li>
+            <li><a href="#habilidades">habilidades</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#portfolio">Projetos</a></li>
           </ul>
         </nav>
 
@@ -47,68 +53,246 @@
             <button>Contato</button>
           </a>
         </div>
+
+        <div class="btn_abrir_menu" id="btn_menu">
+          <i class="bi bi-list-nested"></i>
+        </div>
+
+        <div class="menu_mobile" id="menu_mobile">
+          <div class="btn_fechar">
+            <i class="bi bi-x-circle-fill"></i>
+          </div>
+
+          <nav>
+            <ul>
+              <li><a href="#topo">Inicio</a></li>
+              <li><a href="#habilidades">habilidades</a></li>
+              <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#portfolio">Projetos</a></li>
+            </ul>
+          </nav>
+
+        </div>
+
+        <div class="overlay_menu" id="overlay_menu"></div>
       </div>
     </header>
 
     <main>
-        <section class="topo_site">
-            <div class="interface">
-                <div class="flex">
-                    <div class="txt_topo_site">
-                        <h1>Transformando ideias em realidade digital<span>.</span>
-                        </h1>
+      <section class="topo_site" id="topo">
+        <div class="interface">
+          <div class="flex">
+            <div class="txt_topo_site">
+              <h1>Transformando ideias em realidade digital<span>.</span></h1>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, rem dolorum, obcaecati iure ullam aperiam explicabo exercitationem aspernatur dolore esse et? Doloribus repellat nemo modi temporibus vero, labore vitae cupiditate!</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                rem dolorum, obcaecati iure ullam aperiam explicabo
+                exercitationem aspernatur dolore esse et? Doloribus repellat
+                nemo modi temporibus vero, labore vitae cupiditate!
+              </p>
 
-                        <div class="btn_contato">
-                            <a href="#"><button>Entre em Contato</button></a>
-                        </div>
-                    </div>
-
-                    <div class="img_topo_site">
-                        <img src="./src/images/SobreGustavo.png" alt="Foto GDT">
-                    </div>
-                </div>
+              <div class="btn_contato">
+                <a href="#"><button>Entre em Contato</button></a>
+              </div>
             </div>
-        </section>
 
-        <section class="habilidades">
-            <div class="interface">
-                <h2 class="titulo">Minhas <span>Habilidades</span></h2>
-                <div class="flex">
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-html"></i>
-                        <h3>HTML</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-css"></i>
-                        <h3>CSS</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-js"></i>
-                        <h3>JavaScript</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-php"></i>
-                        <h3>PHP</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-java"></i>
-                        <h3>Java</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                    <div class="habilidades_box">
-                        <i class="bi bi-filetype-sql"></i>
-                        <h3>MySQL</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odit earum id perferendis voluptas eos totam veritatis magni? Dicta optio, a incidunt numquam saepe iste dolores veritatis nemo ipsam accusantium!</p>
-                    </div>
-                </div>
+            <div class="img_topo_site">
+              <img src="./src/images/SobreGustavo.png" alt="Foto GDT" />
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
+
+      <section class="sobre" id="sobre">
+        <div class="interface">
+          <div class="flex">
+            <div class="img_sobre">
+              <img src="./src/images/eu.jpeg" alt="Foto GDT" />
+            </div>
+            <div class="txt_sobre">
+              <h2>Muito Prazer, <span> Sou Gustavo Duarte Tobias</span></h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                illum, praesentium quibusdam nihil quia nesciunt ad accusamus,
+                fugit facilis fugiat ex corrupti ratione atque neque aliquam
+                sequi unde quasi? Quo.
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum, vitae eaque natus error aperiam iusto reprehenderit
+                voluptatibus ab. Enim veniam, sit laborum dicta perferendis
+                dolorem rerum quas nam temporibus vel?
+              </p>
+
+              <div class="social">
+                <a href="#"
+                  ><button><i class="bi bi-linkedin"></i></button
+                ></a>
+                <a href="#"
+                  ><button><i class="bi bi-github"></i></button
+                ></a>
+                <a href="#"
+                  ><button><i class="bi bi-instagram"></i></button
+                ></a>
+                <a href="#"
+                  ><button><i class="bi bi-twitch"></i></button
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="habilidades" id="habilidades">
+        <div class="interface">
+          <h2 class="titulo">Minhas <span>Habilidades</span></h2>
+          <div class="flex">
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-html"></i>
+              <h3>HTML</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-css"></i>
+              <h3>CSS</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-js"></i>
+              <h3>JavaScript</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-php"></i>
+              <h3>PHP</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-java"></i>
+              <h3>Java</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+            <div class="habilidades_box">
+              <i class="bi bi-filetype-sql"></i>
+              <h3>MySQL</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aspernatur odit earum id perferendis voluptas eos totam
+                veritatis magni? Dicta optio, a incidunt numquam saepe iste
+                dolores veritatis nemo ipsam accusantium!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="portfolio" id="portfolio">
+        <div class="interface">
+          <h2 class="titulo">Meus <span>Projetos</span></h2>
+          <div class="flex">
+            <div
+              class="img_port"
+              style="background-image: url(src/images/onepiece.png)"
+            >
+              <div class="overlay">Projeto: One Piece</div>
+            </div>
+            <div
+              class="img_port"
+              style="background-image: url(src/images/fifa.png)"
+            >
+              <div class="overlay">Projeto: FIFA</div>
+            </div>
+            <div
+              class="img_port"
+              style="background-image: url(src/images/mario.png)"
+            >
+              <div class="overlay">Projeto: Mario</div>
+            </div>
+            <div
+              class="img_port"
+              style="background-image: url(src/images/guardioes.png)"
+            >
+              <div class="overlay">Projeto: Guardiões Da Galáxia</div>
+            </div>
+            <div
+              class="img_port"
+              style="background-image: url(src/images/coca.png)"
+            >
+              <div class="overlay">Projeto: Coca-Cola</div>
+            </div>
+            <div
+              class="img_port"
+              style="background-image: url(src/images/iphone.png)"
+            >
+              <div class="overlay">Projeto: Iphone</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="interface">
+        <div class="line_footer">
+          <div class="flex">
+            <div class="logo_footer">
+              <img
+                src="./src/images/LogoGustavo-removebg-preview.png"
+                alt="Logo GDT"
+              />
+            </div>
+            <div class="social">
+              <a href="#"
+                ><button><i class="bi bi-linkedin"></i></button
+              ></a>
+              <a href="#"
+                ><button><i class="bi bi-github"></i></button
+              ></a>
+              <a href="#"
+                ><button><i class="bi bi-instagram"></i></button
+              ></a>
+              <a href="#"
+                ><button><i class="bi bi-twitch"></i></button
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="line_footer borda">
+          <p>
+            <i class="bi bi-envelope-at"></i>
+            <a href="mailto:gustavojoaoluis@gmail.com"
+              >gustavojoaoluis@gmail.com</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
+  <script src="./src/js/script.js" defer></script>
 </html>
