Atualizando alguns recursos

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <nav class="menu_desktop">
           <ul>
             <li><a href="#topo">Inicio</a></li>
-            <li><a href="#habilidades">habilidades</a></li>
             <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#habilidades">habilidades</a></li>
             <li><a href="#portfolio">Projetos</a></li>
           </ul>
         </nav>
 
         <div class="btn_contato">
-          <a href="#">
+          <a href="https://wa.me/11931431381" target="_blank">
             <button>Contato</button>
           </a>
         </div>
@@ -86,14 +86,11 @@
               <h1>Transformando ideias em realidade digital<span>.</span></h1>
 
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                rem dolorum, obcaecati iure ullam aperiam explicabo
-                exercitationem aspernatur dolore esse et? Doloribus repellat
-                nemo modi temporibus vero, labore vitae cupiditate!
+                Olá! Sou GUSTAVO DUARTE TOBIAS, um entusiasta da programação em constante busca por conhecimento e inovação. Como estudante apaixonado por tecnologia, mergulhei no mundo da programação com a determinação de transformar ideias em soluções práticas e funcionais.
               </p>
 
               <div class="btn_contato">
-                <a href="#"><button>Entre em Contato</button></a>
+                <a href="./src/images/Curriculo Gustavo.pdf" download="Curriculo-GDT"><button>Baixar Curriculo</button></a>
               </div>
             </div>
 
@@ -113,31 +110,28 @@
             <div class="txt_sobre">
               <h2>Muito Prazer, <span> Sou Gustavo Duarte Tobias</span></h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                illum, praesentium quibusdam nihil quia nesciunt ad accusamus,
-                fugit facilis fugiat ex corrupti ratione atque neque aliquam
-                sequi unde quasi? Quo.
+                Um entusiasta da tecnologia e recentemente formado no ensino técnico em Análise e Desenvolvimento de Sistemas. Com uma paixão pela resolução de problemas e pelo mundo da programação, minha jornada educacional foi marcada por conquistas importantes.
               </p>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatum, vitae eaque natus error aperiam iusto reprehenderit
-                voluptatibus ab. Enim veniam, sit laborum dicta perferendis
-                dolorem rerum quas nam temporibus vel?
+                Após concluir o ensino médio, mergulhei no aprimoramento de habilidades linguísticas ao me formar no curso do Centro de Línguas, onde aprofundei meus conhecimentos em inglês e espanhol. Essa base linguística sólida tornou-se uma ferramenta valiosa ao longo da minha jornada educacional e profissional.
+              </p>
+              <p>
+                Meu interesse em tecnologia e sistemas me levou a concluir o curso técnico em Análise e Desenvolvimento de Sistemas. Durante esse período, adquiri um conjunto diversificado de habilidades, desde a compreensão detalhada de linguagens de programação até a capacidade de criar soluções inovadoras para desafios tecnológicos.
+              </p>
+              <p>
+                Estou ansioso para aplicar meu conhecimento recém-adquirido em projetos práticos e desafiadores, enquanto continuo buscando oportunidades para aprender e crescer no campo da tecnologia. Meu objetivo é contribuir ativamente para soluções inovadoras e impactantes na área de desenvolvimento de software.
               </p>
 
               <div class="social">
-                <a href="#"
-                  ><button><i class="bi bi-linkedin"></i></button
-                ></a>
-                <a href="#"
-                  ><button><i class="bi bi-github"></i></button
-                ></a>
-                <a href="#"
-                  ><button><i class="bi bi-instagram"></i></button
-                ></a>
-                <a href="#"
-                  ><button><i class="bi bi-twitch"></i></button
-                ></a>
+                <a href="https://www.linkedin.com/in/gustavoduartetobias/" target="_blank"
+                ><button><i class="bi bi-linkedin"></i></button
+              ></a>
+              <a href="https://github.com/kekeldoBorel" target="_blank"
+                ><button><i class="bi bi-github"></i></button
+              ></a>
+              <a href="http://instagram.com/_u/duarte_guuh/" target="_blank"
+                ><button><i class="bi bi-instagram"></i></button
+              ></a>
               </div>
             </div>
           </div>
@@ -152,60 +146,42 @@
               <i class="bi bi-filetype-html"></i>
               <h3>HTML</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                O HTML é a espinha dorsal da web, utilizado para estruturar o conteúdo de uma página. É uma linguagem fundamental para criar páginas web, permitindo a organização de texto, imagens, vídeos e outros elementos dentro de um navegador.
               </p>
             </div>
             <div class="habilidades_box">
               <i class="bi bi-filetype-css"></i>
               <h3>CSS</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                O CSS é usado em conjunto com o HTML para estilizar e projetar o layout das páginas da web. Ele controla a aparência visual dos elementos HTML, como cores, fontes, tamanhos, espaçamentos e disposição dos elementos na página.
               </p>
             </div>
             <div class="habilidades_box">
               <i class="bi bi-filetype-js"></i>
               <h3>JavaScript</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                JavaScript é uma linguagem de programação fundamental para o desenvolvimento web. É executado no navegador do usuário e permite a criação de interações dinâmicas e sofisticadas nas páginas web. Com ele, é possível criar animações, validar formulários, modificar o conteúdo da página dinamicamente e muito mais.
               </p>
             </div>
             <div class="habilidades_box">
               <i class="bi bi-filetype-php"></i>
               <h3>PHP</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                O PHP é uma linguagem de programação amplamente usada no desenvolvimento web para criar aplicativos dinâmicos. É frequentemente utilizado para processar formulários, gerar conteúdo dinâmico, interagir com bancos de dados e construir sistemas web complexos.
               </p>
             </div>
             <div class="habilidades_box">
               <i class="bi bi-filetype-java"></i>
               <h3>Java</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                Java é uma linguagem de programação robusta e versátil, conhecida por sua portabilidade e ampla aplicação. É utilizada no desenvolvimento de aplicativos móveis, sistemas corporativos, aplicativos web e muitas outras aplicações. É uma linguagem orientada a objetos, oferecendo recursos poderosos para construir softwares escaláveis e seguros.
               </p>
             </div>
             <div class="habilidades_box">
               <i class="bi bi-filetype-sql"></i>
               <h3>MySQL</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aspernatur odit earum id perferendis voluptas eos totam
-                veritatis magni? Dicta optio, a incidunt numquam saepe iste
-                dolores veritatis nemo ipsam accusantium!
+                MySQL é um sistema de gerenciamento de banco de dados relacional (RDBMS) muito popular. É frequentemente utilizado em conjunto com PHP para armazenar, gerenciar e manipular dados em aplicações web. É conhecido por sua confiabilidade, escalabilidade e facilidade de uso.
               </p>
             </div>
           </div>
@@ -268,17 +244,14 @@
               />
             </div>
             <div class="social">
-              <a href="#"
+              <a href="https://www.linkedin.com/in/gustavoduartetobias/" target="_blank"
                 ><button><i class="bi bi-linkedin"></i></button
               ></a>
-              <a href="#"
+              <a href="https://github.com/kekeldoBorel" target="_blank"
                 ><button><i class="bi bi-github"></i></button
               ></a>
-              <a href="#"
+              <a href="http://instagram.com/_u/duarte_guuh/" target="_blank"
                 ><button><i class="bi bi-instagram"></i></button
-              ></a>
-              <a href="#"
-                ><button><i class="bi bi-twitch"></i></button
               ></a>
             </div>
           </div>
